# qt-qml-cmake-project-template

./: .gitignore  CMakeLists.txt  README.md  qml.qrc  resources.qrc
src/: Main.qml  main.cpp
src/Subdirectory/: CMakeLists.txt
